fix: Adjust numeric data alignment from left to right across reports and tables.

--- a/webapp/netwarelog/repolog/assets/css/styles.css
+++ b/webapp/netwarelog/repolog/assets/css/styles.css
@@ -177,10 +177,10 @@ body {
     text-align: center !important;
 }
 
-.text-left,
-#resultsTable td.text-left,
-#resultsTable td.text-left strong {
-    text-align: left !important;
+.text-right,
+#resultsTable td.text-right,
+#resultsTable td.text-right strong {
+    text-align: right !important;
 }
 
 .column-filter {
